--- a/mlir/tools/CMakeLists.txt
+++ b/mlir/tools/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(mlir-cuda-runner)
+
+add_subdirectory(mlir-kevin-runner)
 add_subdirectory(mlir-cpu-runner)
 add_subdirectory(mlir-linalg-ods-gen)
 add_subdirectory(mlir-opt)
@@ -6,7 +8,6 @@ add_subdirectory(mlir-rocm-runner)
 add_subdirectory(mlir-translate)
 add_subdirectory(mlir-vulkan-runner)
 add_subdirectory(mlir-shlib)
-
 add_subdirectory(kevin-driver)
 # MIOpen dialect specific.
 add_subdirectory(mlir-miopen-driver)
