--- a/mlir/tools/mlir-kevin-runner/CMakeLists.txt
+++ b/mlir/tools/mlir-kevin-runner/CMakeLists.txt
@@ -24,9 +24,9 @@ target_link_libraries(cwrapper
   set(LIBS
     ${dialect_libs}
     ${conversion_libs}
-    lldCommon
-    lldDriver
-    lldELF
+    #   lldCommon
+    #lldDriver
+    #lldELF
     LLVMCore
     LLVMLTO
     LLVMMC
