add real generated mlir and build config

--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -44,6 +44,7 @@ set(MLIR_CUDA_RUNNER_ENABLED 0 CACHE BOOL "Enable building the mlir CUDA runner"
 set(MLIR_ROCM_RUNNER_ENABLED 0 CACHE BOOL "Enable building the mlir ROCm runner")
 set(MLIR_VULKAN_RUNNER_ENABLED 0 CACHE BOOL "Enable building the mlir Vulkan runner")
 
+set(MLIR_KEVIN_DRIVER_ENABLED 0 CACHE BOOL "Enable build Kevin driver")
 # MIOpen dialect.
 set(MLIR_MIOPEN_DRIVER_ENABLED 0 CACHE BOOL "Enable build MIOpen driver")
 
